Some bug fixes and improvements
Fix issue #1361 - Able to restore database while server is running
Fix issue #1360 - NPE when running reset-admin-password utility